# OpenWearOTA

./: .fuse_hidden0007f25400000001  DOCUMENTATION.md  README.md  TROUBLESHOOTING.md  pyproject.toml
openwearota/: __init__.py  cli.py  crc.py  detect.py  uart.py
openwearota.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
openwearota/drivers/: __init__.py  beken.py  jieli.py  omnicro.py  phyplus.py  realsil.py  shb_slb.py  telink.py
prebuilts/: PREBUILTS.md
